--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -7,26 +7,29 @@
     </head>
     <body>
         <div id="layout">
-            <h1>GDWD 105 - Agenda for September 18th</h1>
-            <h3>Week 25 Day 5 (Advanced CSS - Flexbox)</h3>
+            <h1>GDWD 105 - Agenda for September 19th</h1>
+            <h3>Week 26 Day 1 (Advanced CSS II)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Attendance Question</h2>
                     <ul>
                         <li>
-                            Would you rather have a perfect photographic memory 
-                            or a perfect echoic memory?
+                            Would you rather be magically gifted knowledge,
+                            wisdom, or strength?
+
                         </li>
                     </ul>
-                    <div class="img-container more-space blue-gray">
+                    <div class="img-container more-space dark-blue-gray">
                         <img 
-                            src="images/lab-fox.webp"
-                            alt="lab fox"
+                            src="images/buns-of-steel.webp"
+                            alt="buns of steel"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Project</span>Mebay Product Page</li>
+                        <li><span class="type">Quiz</span>Advanced CSS I</li>
+                        <li><span class="type">Survey</span>Advanced CSS I Wrap Up</li>
+                        <li><span class="type">Extra Credit</span>Home Page Prototype</li>
                     </ul>
                 </div>
 
@@ -36,22 +39,24 @@
 
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
-                            <li><span class="type">Project</span>Mebay Product Page</li>
+                            <li><span class="type">Quiz</span>Advanced CSS I</li>
+                            <li><span class="type">Survey</span>Advanced CSS I Wrap Up</li>
+                            <li><span class="type">PowerPoint</span>Content Layouts - Heroes</li>
+
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
                         <ul>
-                            <li><span class="type">Project</span>Mebay Product Page [cont.]</li>
+                            <li><span class="type">Demo</span>Heroes</li>
                         </ul>
                     </div>
                     <h3 class="centered">Dinner Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">Lab Time</span>Quiz Study Hints</li>
-                            <li><span class="type">Project</span>Mebay Product Page [cont.]</li>
+                            <li><span class="type">Extra Credit</span>Home Page Prototype</li>
                         </ul>
                     </div>
                 </div>
