--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -7,29 +7,25 @@
     </head>
     <body>
         <div id="layout">
-            <h1>GDWD 105 - Agenda for September 19th</h1>
-            <h3>Week 26 Day 1 (Advanced CSS II)</h3>
+            <h1>GDWD 105 - Agenda for September 22nd</h1>
+            <h3>Week 26 Day 2 (Advanced CSS II)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Attendance Question</h2>
                     <ul>
                         <li>
-                            Would you rather be magically gifted knowledge,
-                            wisdom, or strength?
-
+                            Are you able to nap during the day?
                         </li>
                     </ul>
-                    <div class="img-container more-space dark-blue-gray">
+                    <div class="img-container">
                         <img 
-                            src="images/buns-of-steel.webp"
-                            alt="buns of steel"
+                            src="images/rest-day.jpeg"
+                            alt="rest day"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Quiz</span>Advanced CSS I</li>
-                        <li><span class="type">Survey</span>Advanced CSS I Wrap Up</li>
-                        <li><span class="type">Extra Credit</span>Home Page Prototype</li>
+                        <li><span class="type">FINAL EVAL</span></li>
                     </ul>
                 </div>
 
@@ -37,26 +33,25 @@
                     <div class="wrapper">
                         <h3>Warm-up (6pm-6:10pm)</h3>
 
-                        <h3>Period 1 (6:10pm-7:10pm)</h3>
+                        <h3>Period 1 (6:10pm-8:30pm)</h3>
                         <ul>
-                            <li><span class="type">Quiz</span>Advanced CSS I</li>
-                            <li><span class="type">Survey</span>Advanced CSS I Wrap Up</li>
-                            <li><span class="type">PowerPoint</span>Content Layouts - Heroes</li>
-
+                            <li><span class="type">FINAL EVAL</span></li>
                         </ul>
-                    </div>
+                    <!-- </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
                         <ul>
                             <li><span class="type">Demo</span>Heroes</li>
-                        </ul>
+                        </ul> -->
                     </div>
                     <h3 class="centered">Dinner Break (45min)</h3>
                     <div class="wrapper">
-                        <h3>Period 3 (9:15pm-11pm)</h3>
+                        <h3>Period 2 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">Extra Credit</span>Home Page Prototype</li>
+                            <li><span class="type">PowerPoint</span>Content Layouts - Grid Galleries</li>
+                            <li><span class="type">PowerPoint</span>CSS Grid</li>
+                            <li><span class="type">Demo</span>Grid Galleries</li>
                         </ul>
                     </div>
                 </div>
