--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -7,25 +7,27 @@
     </head>
     <body>
         <div id="layout">
-            <h1>GDWD 105 - Agenda for September 22nd</h1>
-            <h3>Week 26 Day 2 (Advanced CSS II)</h3>
+            <h1>GDWD 105 - Agenda for September 23rd</h1>
+            <h3>Week 26 Day 3 (Advanced CSS II)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Attendance Question</h2>
                     <ul>
                         <li>
-                            Are you able to nap during the day?
+                            Do you have a favorite sport (either to watch or to play)? 
+                            If so, what is it?
+
                         </li>
                     </ul>
                     <div class="img-container">
                         <img 
-                            src="images/rest-day.jpeg"
-                            alt="rest day"
+                            src="images/fantasy-football.webp"
+                            alt="fantasy football"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">FINAL EVAL</span></li>
+                        <li><span class="type">Exercise</span>Themed Gallery Page</li>
                     </ul>
                 </div>
 
@@ -33,25 +35,25 @@
                     <div class="wrapper">
                         <h3>Warm-up (6pm-6:10pm)</h3>
 
-                        <h3>Period 1 (6:10pm-8:30pm)</h3>
+                        <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
-                            <li><span class="type">FINAL EVAL</span></li>
+                            <li><span class="type">PowerPoint</span>Content Layouts - Masonry Galleries</li>
+                            <li><span class="type">Demo</span>Masonry Galleries</li>
                         </ul>
-                    <!-- </div>
+                    </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
                         <ul>
-                            <li><span class="type">Demo</span>Heroes</li>
-                        </ul> -->
+                            <li><span class="type">Demo</span>Masonry Galleries [cont.]</li>
+                            <li><span class="type">Exercise</span>Themed Gallery Page</li>
+                        </ul>
                     </div>
                     <h3 class="centered">Dinner Break (45min)</h3>
                     <div class="wrapper">
-                        <h3>Period 2 (9:15pm-11pm)</h3>
+                        <h3>Period 3 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">PowerPoint</span>Content Layouts - Grid Galleries</li>
-                            <li><span class="type">PowerPoint</span>CSS Grid</li>
-                            <li><span class="type">Demo</span>Grid Galleries</li>
+                            <li><span class="type">Exercise</span>Themed Gallery Page [cont.]</li>
                         </ul>
                     </div>
                 </div>
