--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -7,27 +7,26 @@
     </head>
     <body>
         <div id="layout">
-            <h1>GDWD 105 - Agenda for September 23rd</h1>
-            <h3>Week 26 Day 3 (Advanced CSS II)</h3>
+            <h1>GDWD 105 - Agenda for September 24th</h1>
+            <h3>Week 26 Day 4 (Advanced CSS II)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Attendance Question</h2>
                     <ul>
                         <li>
-                            Do you have a favorite sport (either to watch or to play)? 
-                            If so, what is it?
-
+                            If you had to live without one of the five senses,
+                            which would you pick?
                         </li>
                     </ul>
-                    <div class="img-container">
+                    <div class="img-container more-space reddish-black">
                         <img 
-                            src="images/fantasy-football.webp"
-                            alt="fantasy football"
+                            src="images/three-monkeys.jpeg"
+                            alt="three monkeys"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span>Themed Gallery Page</li>
+                        <li><span class="type">Exercise</span>Responsive Déjà Vu</li>
                     </ul>
                 </div>
 
@@ -37,23 +36,22 @@
 
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
-                            <li><span class="type">PowerPoint</span>Content Layouts - Masonry Galleries</li>
-                            <li><span class="type">Demo</span>Masonry Galleries</li>
+                            <li><span class="type">PowerPoint</span>Responsive Layouts and Media Queries</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
                         <ul>
-                            <li><span class="type">Demo</span>Masonry Galleries [cont.]</li>
-                            <li><span class="type">Exercise</span>Themed Gallery Page</li>
+                            <li><span class="type">PowerPoint</span>Flexbox - Part 2</li>
+                            <li><span class="type">Demo</span>Media Queries</li>
                         </ul>
                     </div>
                     <h3 class="centered">Dinner Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Themed Gallery Page [cont.]</li>
+                            <li><span class="type">Exercise</span>Responsive Déjà Vu</li>
                         </ul>
                     </div>
                 </div>
