--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -7,26 +7,26 @@
     </head>
     <body>
         <div id="layout">
-            <h1>GDWD 105 - Agenda for September 24th</h1>
-            <h3>Week 26 Day 4 (Advanced CSS II)</h3>
+            <h1>GDWD 105 - Agenda for September 25th</h1>
+            <h3>Week 26 Day 5 (Advanced CSS II)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Attendance Question</h2>
                     <ul>
                         <li>
-                            If you had to live without one of the five senses,
-                            which would you pick?
+                            If you could send a message back in time to yourself
+                            on Day 1 of this course, what would you say?
                         </li>
                     </ul>
-                    <div class="img-container more-space reddish-black">
+                    <div class="img-container dark-blue-green">
                         <img 
-                            src="images/three-monkeys.jpeg"
-                            alt="three monkeys"
+                            src="images/time-traveler.webp"
+                            alt="time traveling owl"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span>Responsive Déjà Vu</li>
+                        <li><span class="type">Project</span>Photography Portfolio Site</li>
                     </ul>
                 </div>
 
@@ -36,22 +36,22 @@
 
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
-                            <li><span class="type">PowerPoint</span>Responsive Layouts and Media Queries</li>
+                            <li><span class="type">Project</span>Photography Portfolio Site</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
                         <ul>
-                            <li><span class="type">PowerPoint</span>Flexbox - Part 2</li>
-                            <li><span class="type">Demo</span>Media Queries</li>
+                            <li><span class="type">Project</span>Photography Portfolio Site [cont.]</li>
                         </ul>
                     </div>
                     <h3 class="centered">Dinner Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Responsive Déjà Vu</li>
+                            <li><span class="type">Lab Time</span>Final Exam Study Tips</li>
+                            <li><span class="type">Project</span>Photography Portfolio Site [cont.]</li>
                         </ul>
                     </div>
                 </div>
