--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -7,26 +7,27 @@
     </head>
     <body>
         <div id="layout">
-            <h1>GDWD 105 - Agenda for September 25th</h1>
-            <h3>Week 26 Day 5 (Advanced CSS II)</h3>
+            <h1>GDWD 105 - Agenda for September 26th</h1>
+            <h3>Week 27 Day 1 (Career Services)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Attendance Question</h2>
                     <ul>
                         <li>
-                            If you could send a message back in time to yourself
-                            on Day 1 of this course, what would you say?
+                            What is a character trait that you admire in other people?
                         </li>
                     </ul>
-                    <div class="img-container dark-blue-green">
+                    <div class="img-container">
                         <img 
-                            src="images/time-traveler.webp"
-                            alt="time traveling owl"
+                            src="images/impressive.webp"
+                            alt="vader impressive"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Project</span>Photography Portfolio Site</li>
+                        <li><span class="type">FINAL EXAM</span></li>
+                        <li><span class="type">Survey</span>Advanced CSS II Wrap Up</li>
+                        <li><span class="type">Exercise</span>Personal Branding Research</li>
                     </ul>
                 </div>
 
@@ -36,22 +37,22 @@
 
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
-                            <li><span class="type">Project</span>Photography Portfolio Site</li>
+                            <li><span class="type">FINAL EXAM</span></li>
+                            <li><span class="type">Survey</span>Advanced CSS II Wrap Up</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
                         <ul>
-                            <li><span class="type">Project</span>Photography Portfolio Site [cont.]</li>
+                            <li><span class="type">PowerPoint</span>Personal Branding</li>
                         </ul>
                     </div>
                     <h3 class="centered">Dinner Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">Lab Time</span>Final Exam Study Tips</li>
-                            <li><span class="type">Project</span>Photography Portfolio Site [cont.]</li>
+                            <li><span class="type">Exercise</span>Personal Branding Research</li>
                         </ul>
                     </div>
                 </div>
