--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -7,27 +7,26 @@
     </head>
     <body>
         <div id="layout">
-            <h1>GDWD 105 - Agenda for September 29th</h1>
-            <h3>Week 27 Day 2 (Career Services)</h3>
+            <h1>GDWD 105 - Agenda for September 30th</h1>
+            <h3>Week 27 Day 3 (Career Services)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Attendance Question</h2>
                     <ul>
                         <li>
-                            What is a character trait or behavior 
-                            that you really dislike in other people?
+                            If you could magically become proficient at one skill,
+                            what skill would you choose?
                         </li>
                     </ul>
-                    <div class="img-container more-space black">
+                    <div class="img-container more-space dark-gray">
                         <img 
-                            src="images/emperor.webp"
-                            alt="emperor hate"
+                            src="images/lab-experiment.webp"
+                            alt="overthinking fox"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span>Personal Brand Statement</li>
-                        <li><span class="type">Extra Credit</span>Branded Resume - Checkpoint 1</li>
+                        <li><span class="type">Exercise</span>Branded Resume - Checkpoint 2</li>
                     </ul>
                 </div>
 
@@ -37,23 +36,22 @@
 
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
-                            <li><span class="type">PowerPoint</span>Careers in Graphic Design</li>
+                            <li><span class="type">PowerPoint</span>Careers Development Tips</li>
+                            <li><span class="type">Exercise</span>Branded Resume - Checkpoint 2</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
                         <ul>
-                            <li><span class="type">PowerPoint</span>Personal Branding [cont.]</li>
-                            <li><span class="type">Exercise</span>Personal Brand Statement</li>
+                            <li><span class="type">Exercise</span>Branded Resume - Checkpoint 2 [cont.]</li>
                         </ul>
                     </div>
                     <h3 class="centered">Dinner Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">PowerPoint</span>Branded Resume</li>
-                            <li><span class="type">Extra Credit</span>Branded Resume - Checkpoint 1</li>
+                            <li><span class="type">Exercise</span>Branded Resume - Checkpoint 2 [cont.]</li>
                         </ul>
                     </div>
                 </div>
