--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,29 +8,27 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 105 - Agenda for July 25th</h1>
-            <h3>Week 27 Day 5 (Career Services Week)</h3>
+            <h1>GDWD 105 - Agenda for October 13th</h1>
+            <h3>Week 38 Day 5 (Portfolio Projects Week 1)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
                         <li>
-                            Which of your remaining classes are you most excited 
-                            for: Motion Graphics (106), Layout Design and Print (107), or
-                            the Portfolio course (108)?
+                            What was your favorite project that you've done so 
+                            far in the program?
+
                         </li>
                     </ul>
-                    <div class="img-container more-space final-black">
+                    <div class="img-container final-black">
                         <img 
-                            src="images/finalday.jpg"
+                            src="images/painter-fox.jpg"
                             alt="final day"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Survey</span>105 End of Course Survey</li>
-                        <li><span class="type">Survey</span>Career Services Week Wrap Up</li>
-                        <li><span class="type">Project</span>Branded Resume - Complete (CS)</li>
+                        <li><span class="type">Project</span>Projects #1-3 Final PDF Submission & Portfolio Update</li>
                     </ul>
                 </div>
 
@@ -39,23 +37,21 @@
                         <h3>Announcements (9am-9:10am)</h3>
                         <h3>Period 1 (9:10am-11:20am)</h3>
                         <ul>
-                            <li><span class="type">Survey</span>105 End of Course Survey</li>
-                            <li><span class="type">Survey</span>Career Services Week Wrap Up</li>
-                            <li><span class="type">Project</span>Branded Resume - Complete (CS)</li>
+                            <li><span class="type">Project</span>Projects #1-3 Final PDF Submission & Portfolio Update</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (11:30am-12pm)</h3>
                         <ul>
-                            <li><span class="type">Project</span>Branded Resume - Complete (CS)</li>
+                            <li><span class="type">Project</span>Projects #1-3 Final PDF Submission & Portfolio Update</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (12:45pm-2:00pm)</h3>
                         <ul>
-                            <li><span class="type">Project</span>Branded Resume - Complete (CS)</li>
+                            <li><span class="type">Project</span>Projects #1-3 Final PDF Submission & Portfolio Update</li>
                         </ul>
                     </div>
                 </div>
