--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,27 +8,27 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 105 - Agenda for October 14th</h1>
-            <h3>Week 39 Day 1 (Portfolio Projects Week 2)</h3>
+            <h1>GDWD 105 - Agenda for October 15th</h1>
+            <h3>Week 39 Day 2 (Portfolio Projects Week 2)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
                         <li>
-                            What was your favorite project that you've done so 
-                            far in the program?
+                            What is one of your favorite Halloween movies?
 
                         </li>
                     </ul>
                     <div class="img-container final-black">
                         <img 
-                            src="images/painter-fox.jpg"
+                            src="images/nightmare-before-christmas.jpg"
                             alt="final day"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Discussion Post</span>Week 2 Project Selection</li>
+                        <li><span class="type">Exercise</span>LinkedIn Review</li>
+                        <li><span class="type">Extra Credit</span>Project #4 Re-Submission</li>
                     </ul>
                 </div>
 
@@ -37,22 +37,23 @@
                         <h3>Announcements (9am-9:10am)</h3>
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">Kahoot</span>Final Exam Review #1</li>
+                            <li><span class="type">Kahoot</span>Final Exam Review #2</li>
+                            <li><span class="type">Exercise</span>LinkedIn Review</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>
-                            <li><span class="type">Heads Up</span>Career Services Package Guidelines</li>
-                            <li><span class="type">Discussion Post</span>Week 2 Project Selection</li>
+                            <li><span class="type">Exercise</span>LinkedIn Review [cont.]</li>
+                        <li><span class="type">Extra Credit</span>Project #4 Re-Submission</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (12:45pm-2:00pm)</h3>
                         <ul>
-                            <li><span class="type">Discussion Post</span>Week 2 Project Selection</li>
+                            <li><span class="type">Extra Credit</span>Project #4 Re-Submission</li>
                         </ul>
                     </div>
                 </div>
