--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -1,34 +1,33 @@
 <!DOCTYPE html>
 <html lang="en-US">
     <head>
-        <title>GDWD 105 AGENDA (6026 Cohort)</title>
+        <title>GDWD 108 AGENDA (6026 Cohort)</title>
         <meta name="description" content="Here's what we're doing in class today!">
         <link href="css/agenda.css" rel="stylesheet">
     </head>
     <body>
         
         <div id="layout">
-            <h1>GDWD 105 - Agenda for October 15th</h1>
-            <h3>Week 39 Day 2 (Portfolio Projects Week 2)</h3>
+            <h1>GDWD 108 - Agenda for October 16th</h1>
+            <h3>Week 39 Day 3 (Portfolio Projects Week 2)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
                         <li>
-                            What is one of your favorite Halloween movies?
+                            What is your favorite Halloween candy?
 
                         </li>
                     </ul>
                     <div class="img-container final-black">
                         <img 
-                            src="images/nightmare-before-christmas.jpg"
+                            src="images/halloween_cats.webp"
                             alt="final day"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span>LinkedIn Review</li>
-                        <li><span class="type">Extra Credit</span>Project #4 Re-Submission</li>
+                        <li><span class="type">Extra Credit</span>Project #5 Re-Submission</li>
                     </ul>
                 </div>
 
@@ -37,23 +36,22 @@
                         <h3>Announcements (9am-9:10am)</h3>
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">Kahoot</span>Final Exam Review #2</li>
-                            <li><span class="type">Exercise</span>LinkedIn Review</li>
+                            <li><span class="type">Kahoot</span>Final Exam Review #3</li>
+                            <li><span class="type">Extra Credit</span>Project #5 Re-Submission</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>LinkedIn Review [cont.]</li>
-                        <li><span class="type">Extra Credit</span>Project #4 Re-Submission</li>
+                            <li><span class="type">Extra Credit</span>Project #5 Re-Submission</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (12:45pm-2:00pm)</h3>
                         <ul>
-                            <li><span class="type">Extra Credit</span>Project #4 Re-Submission</li>
+                            <li><span class="type">Extra Credit</span>Project #5 Re-Submission</li>
                         </ul>
                     </div>
                 </div>
