--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,20 +8,20 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 105 - Agenda for January 26th</h1>
-            <h3>Week 22 Day 1 (Intermediate HTML)</h3>
+            <h1>GDWD 105 - Agenda for January 27th</h1>
+            <h3>Week 22 Day 2 (Intermediate HTML)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
                         <li>
-                            <li>What is one way you motivate yourself?</li>
+                            <li>Do you see the glass as half empty or half full?</li>
                         </li>
                     </ul>
-                    <div class="img-container">
+                    <div class="img-container more-space ash-gray">
                         <img 
-                            src="images/motivation.png"
-                            alt="motivation"
+                            src="images/good-day.webp"
+                            alt="good day"
                         >
                     </div>
                 </div>
@@ -32,16 +32,14 @@
                         <h3>Announcements (9am-9:10am)</h3>
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">Quiz</span>Intro to HTML</li>
-                            <li><span class="type">Survey</span>Intro to HTML Wrap Up</li>
-                            <li><span class="type">Kahoot</span>HTML Attributes Review</li>
+                            <li><span class="type">Kahoot</span>HTML Indentation Review</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>
-                            <li><span class="type">Demo</span>Internal Anchors</li>
+                            <li><span class="type">Demo</span>External Anchors</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
@@ -53,15 +51,13 @@
                     <div class="wrapper">
                         <h3>Period 3 (12:45pm-2:00pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Mystery Boxes</li>
+                            <li><span class="type">Exercise</span>Choose Your Own Adventure</li>
                         </ul>
                     </div>
                     <h2>Deliverables for Today</h2>
                     <div class="wrapper outline">
                         <ul>
-                            <li><span class="type">Quiz</span>Intro to HTML</li>
-                            <li><span class="type">Survey</span>Intro to HTML Wrap Up</li>
-                            <li><span class="type">Exercise</span>Mystery Boxes</li>
+                            <li><span class="type">Exercise</span>Choose Your Own Adventure</li>
                         </ul>
                     </div>
                 </div>
